<resources>
    <string name="app_name">Sopt Seminar 29th</string>

    <!--Home-->
    <string name="SOPTHub">SOPTHub</string>
    <string name="home_name">이름</string>
    <string name="home_age">나이</string>
    <string name="home_mbti">MBTI</string>
    <string name="home_introduction">간단한 소개</string>

    <!--SignIn-->
    <string name="signin">로그인</string>
    <string name="signin_id">아이디</string>
    <string name="signin_id_hint">아이디를 입력해주세요.</string>
    <string name="signin_pw">비밀번호</string>
    <string name="signin_pw_hint">비밀번호를 입력해주세요.</string>
    <string name="signin_signup">회원가입</string>

    <!--SignUp-->
    <string name="signup_name">이름</string>
    <string name="signup_name_hint">이름을 입력해주세요.</string>
    <string name="signup_complete">회원가입 완료</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>